--- a/src/app/comun/interfaz/interfaz.component.html
+++ b/src/app/comun/interfaz/interfaz.component.html
@@ -219,7 +219,7 @@
                 <!-- Indicador Duración -->
                 <div class="contenedorDuracion Texto3">
                     <img class="fondoIndicador" [ngClass]="{'ventaja': buffSeleccionado.tipo == 'Ventaja'}" src="assets/ui/icons/fondo-vida.png"/>
-                    <div class="valorIndicador">{{buffSeleccionado.duracion}}</div>
+                    <div class="valorIndicador Arial">{{buffSeleccionado.duracion}}</div>
                 </div>
 
             </div>
