--- a/src/app/comun/mazmorra/mazmorra.component.html
+++ b/src/app/comun/mazmorra/mazmorra.component.html
@@ -222,6 +222,11 @@
         </ng-container>
 	</div>
 
+
+    <div id="fondoCombate">
+
+    </div>
+
      <!-- *************************************************
             MAPA MAZMORRA
      ************************************************* -->
