--- a/src/app/comun/barra/barra.component.sass
+++ b/src/app/comun/barra/barra.component.sass
@@ -11,28 +11,43 @@
     width: 100%
     height: 100%
     overflow: hidden
-    border-radius: 5px/50%
+    &.horizontal
+      border-radius: 5px/50%
+      border: #f3b95c 1px solid
+    &.vertical
+      border: #cfcfcf 1px solid
+    &.radial
+      border: none 
+      box-shadow: none 
+      overflow: visible
+      
     #barra
         position: absolute
         width: 100%
         height: 100%
 
+        .radial
+          position: absolute
+          width: 100%  
+          height: 100%
+          overflow: visible
+          opacity: 0.7
+          &.energia
+            right: 5%
+          
         .fondoBarra
             position: absolute
             width: 100%
             height: 100%
+            bottom: 0
             background-repeat: no-repeat
             background-size: 100% 100%
             &.escudo
                 background-color: white
             &.Vida
-                //background-image: url("../../../assets/Background/Fondo-Vida.png")
                 background-color: #c10027
             &.Energia
                 background-color: #efac00
-                //background-image: url("../../../assets/Background/Fondo-Energia.png")
-            //&.Mana
-                //background-image: url("../../../assets/Background/Fondo-Mana.png")
 
     .contenedorCirculo
         position: absolute
