--- a/src/app/comun/mazmorra/mazmorra.component.sass
+++ b/src/app/comun/mazmorra/mazmorra.component.sass
@@ -9,6 +9,7 @@
 
 #tiempo
   position: absolute
+  display: none
   z-index: 5
   left: 38vw
   top: 2vh
@@ -208,6 +209,7 @@
 
 #experiencia
     position: absolute
+    display: none
     bottom: 0%
     left: 0%
     width: 100%
@@ -216,18 +218,19 @@
 
 #panelControl
     position: absolute
-    display: block
-    bottom: 3%
-    left: 43%
+    //display: none
+    bottom: 34%
+    right: -12%
     width: 40%
     height: 30%
+    transform: rotateZ(270deg)
     margin-left: -20%
 
 #iconoConfiguracion
     position: absolute
     z-index: 5
     top: 1%
-    left: 2%
+    right: 1%
     height: 8%
 
 #contenedorHistorial
@@ -264,9 +267,9 @@
 #iconoReload
     position: absolute
     z-index: 5
-    top: 2%
-    left: 10%
-    width: 3%
+    bottom: 8%
+    right: 1%
+    width: 4%
     filter: invert(0.7)
 
 
@@ -320,30 +323,37 @@
 
 #contenedorHeroes
     position: absolute
+    //display: none
     display: flex
-    flex-direction: column
-    right: 1%
-    top: 0
-    height: 100%
+    flex-direction: row
+    padding-left: 3%
+    bottom: 1% 
+    height: 20%
+    width: 90%
+    gap: 7%
     .panelHeroe
         position: relative
         display: block
-        height: 17%
-        margin-top: 2vh
+        aspect-ratio: 1
 
 #contenedorEnemigos
     position: absolute
     display: flex
-    flex-direction: column
-    left: 3%
-    top: 10%
-    height: 70%
-    gap: 10px
+    flex-direction: row
+    justify-content: space-around
+    height: 20%
+    width: 100%
+    padding-top: 1%
+    padding-bottom: 5%
+    background: linear-gradient(180deg, #232226, transparent)
+    z-index: 1
     .panelEnemigo
         position: relative
         display: block
-        max-height: 20%
-        margin-bottom: 3%
+        aspect-ratio: 1.5
+
+#fondoCombate
+    position: absolute
 
 //------------------------------Enemigos-------------------------
 
@@ -1066,6 +1076,7 @@
       height: 100%
       left: 80%
       width: 20%
+      display: none
       .Texto-Tiempo
         position: absolute
         width: 100%
