--- a/src/app/comun/mazmorra/mazmorra.component.html
+++ b/src/app/comun/mazmorra/mazmorra.component.html
@@ -224,13 +224,14 @@
 
 
     <div id="fondoCombate">
-
+        <waveComponent></waveComponent>
     </div>
 
      <!-- *************************************************
             MAPA MAZMORRA
      ************************************************* -->
 
+<!--
   <ng-container *ngIf="this.mazmorraService.mostrarMazmorra">
 	<mapaMazmorraComponent #mapaMazmorra id="mapaMazmorra"
       (eventoClickElemento)="clickElemento($event)"
@@ -241,6 +242,7 @@
       [salasDescubiertas]="this.mazmorraService.sesion.render.mazmorra.salasDescubiertas">
   </mapaMazmorraComponent>
   </ng-container>
+-->
 
 </div>
 
