--- a/src/app/comun/animacion-numero/animacion-numero.component.sass
+++ b/src/app/comun/animacion-numero/animacion-numero.component.sass
@@ -5,7 +5,7 @@
   top: 0%
   width: 100%
   height: 100%
-  pointer-events: none
+  pointer-events: none !important
 
 .animacionNumero
   position: absolute
@@ -19,7 +19,7 @@
   height: 100%
   z-index: 20
   opacity: 0
-  pointer-events: none
+  pointer-events: none !important
 
 
 
