--- a/src/app/comun/enemigo/enemigo.component.sass
+++ b/src/app/comun/enemigo/enemigo.component.sass
@@ -7,6 +7,11 @@
   height: 100%
   aspect-ratio: 1
 
+#animacionNumero
+  position: absolute
+  top: 100%
+  pointer-events: none
+
 .contenedorEnemigo
   position: absolute
   display: flex
