--- a/src/app/comun/heroe/heroe.component.sass
+++ b/src/app/comun/heroe/heroe.component.sass
@@ -7,6 +7,11 @@
   height: 100%
   aspect-ratio: 1
 
+#animacionNumero
+  position: absolute
+  bottom: 100%
+  pointer-events: none
+
 .contenedorHeroe
     position: relative
     width: 100%
