--- a/src/app/comun/interfaz/interfaz.component.sass
+++ b/src/app/comun/interfaz/interfaz.component.sass
@@ -251,28 +251,19 @@ mark
     background-color: $colorFondo2
     color: $colorTexto
     width: 30vw
-    height: 60vh
-    top: 15vh
+    height: 50vh
+    top: 25vh
     left: 35vw
 
     .hechizo
         position: relative
-        display: inline-block
-        height: 10vw
-        width: 10vw
-        left: 10vw
-        top: 2vh
+        height: 30%
+        aspect-ratio: 1
+        margin: auto
+        top: 5% 
         outline: solid 1px white
         overflow: hidden
         background-size: 100%
-
-    .hechizo:hover
-        color: black
-        background-color: rgba(255,255,255,0.6)
-        .opcionesGenerales
-            position: relative
-            width: 100%
-            height: 100%
 
     .atributo
       position: absolute
