--- a/src/app/comun/wave/wave.component.sass
+++ b/src/app/comun/wave/wave.component.sass
@@ -1,153 +1,94 @@
 
-
 @import "../../../variables.sass"
 
-::ng-deep .fondoSocial
-    background-color: rgba(black, 0.4)
+#footer-navmenu 
+    .wave-animation
+      -webkit-transform: rotate(180deg)
+      -moz-transform: rotate(180deg)
+      transform: rotate(180deg)
+      bottom: initial
+      top: 0
+      height: 100%
+      opacity: 0.5
 
-::ng-deep .contenedorSocial
-  display: flex
-  justify-content: center
-  align-items: center
-
-  .mat-dialog-container
-    position: absolute !important
-    width: 50%
-    height: 20%
-    min-width: 80vw
-    min-height: 95vh
-    color: $colorTexto
-    padding: 0
-    overflow: initial
-
-  .contenedor
-    position: absolute
-    width: 100%
+#footer-navmenu
     height: 100%
-    color: $colorTexto
-    background-color: $colorFondo2
+    background: linear-gradient(180deg, rgba(131,58,180,0) 0%, rgba(238,238,238,0.2) 50%, rgba(252,176,69,0) 100%)
+    position: relative
 
-    .title
-        margin-top: 20px
-        width: 100%
-        text-align: center
-    .botonAddAmigo
-        position: absolute
-        width: 20%
-        height: 10%
-        top: 5%
-        left: 5%
+#footer-navmenu-container
+    max-width: 1000px
+    margin: 0 auto
+    text-align: center
 
-    .botonCerrar
-        position: absolute
-        width: 20%
-        height: 10%
-        top: 5%
-        right: 5%
+#footer-navmenu ul
+    list-style: none
+    margin: 0
 
-    .textoDialogo
-        margin-top: 20px
-        width: 100%
-        text-align: center
+#footer-navmenu ul li
+    display: inline-block
+    margin: 6px 0
 
-    .divisor
-        position: relative
-        width: 80%
-        margin: 0 10%
+#footer-navmenu ul li:last-child::after
+    content: ""
 
-    .contenedorPestanas
-        position: relative
-        display: flex
-        justify-content: center
-        width: 80%
-        margin: 0 10%
-        z-index: 10
-        height: 10%
-        .pestana
-            position: relative
-            display: flex
-            align-items: center
-            justify-content: center
-            width: 33%
-            &.seleccionado
-                background-color: rgba(black,0.3)
+#footer-container
+    //background: linear-gradient(180deg, rgba(131,58,180,0) 0%, rgba(238,238,238,1) 50%, rgba(252,176,69,0) 100%)
 
-    .contenedorOpciones
-        position: relative
-        width: 80%
-        height: 65%
-        margin: 0 10%
-        z-index: 10
-        background-color: rgba(black,0.3)
+/* Wave Animation */
+.wave-animation
+    display: block
+    width: 100%
+    height: 10em
+    max-height: 100vh
+    margin: 0
+    position: absolute
+    bottom: -10px
 
-        .opcionesGenerales
-            position: relative
-            width: 100%
-            height: 100%
-            padding: 3% 0
+.wave-bg 
+    use
+      -webkit-animation: move-forever 20s linear infinite
+      animation: move-forever 20s linear infinite
 
-            .amigo
-                position: relative
-                display: flex
-                flex-direction: row
-                width: 100%
-                height: 20%
-                margin-bottom: 3%
-                box-shadow: inset 0px 0px 10px 0px white
+.wave-animation
+    height: 4em
+.wave-animation
+    height: 5em
 
-                .nombre
-                    position: relative
-                    display: inline-flex
-                    align-items: center
-                    justify-content: center
-                    height: 100%
-                    width: 40%
-                .nivel
-                    position: relative
-                    display: inline-flex
-                    align-items: center
-                    justify-content: center
-                    height: 100%
-                    height: 100%
-                    width: 30%
+#mascara 
+    animation: move-forever 20s linear infinite
+    animation-delay: -2s
 
-                .contenedorBotonInvitar
-                    position: relative
-                    display: inline-flex
-                    align-items: center
-                    justify-content: center
-                    height: 100%
-                    width: 20%
-                    margin: 0 auto
+.wave-bg 
+    use:nth-child(1)
+      animation-delay: -3s
+      //fill: rgba(100, 174, 199, 0.58)
 
-                    .botonInvitar
-                        width: 100%
-                        height: 100% 
-                        text-align: center
+.wave-bg 
+    use:nth-child(2)
+      animation-delay: -2s
+      animation-duration: 10s
+      //fill: rgba(232, 174, 199, 0.85)
 
-                .botonEliminar
-                    position: relative
-                    display: inline-flex
-                    align-items: center
-                    justify-content: center
-                    height: 100%
-                    height: 100%
-                    width: 5%
+.wave-bg
+    use:nth-child(3)
+      animation-delay: -4s
+      animation-duration: 30s
 
-    .contenedorBotones
-        position: absolute
-        display: flex
-        justify-content: center
-        width: 100%
-        height: 10%
-        bottom: 3%
+.wave-bg 
+    use:nth-child(1)
+      animation-delay: -5s
+      //fill: rgba(100, 174, 199, 0.58)
 
-        .boton
-            position: relative
-            display: inline-block
-            color: white
-            height: 100%
-            width: 20%
-            margin: 0 15%
+@-webkit-keyframes move-forever
+  0%
+    transform: translate(-90px,0%)
+  100%
+    transform: translate(85px,0%)
 
+@keyframes move-forever
+  0%
+    transform: translate(-90px,0%)
+  100%
+    transform: translate(85px,0%)
 
